<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/glucoseFragment"
        android:icon="@drawable/ic_glucose"
        android:title="@string/nav_glucose" />
    <item
        android:id="@+id/insulinFragment"
        android:icon="@drawable/ic_insulin"
        android:title="@string/nav_insulin" />
    <item
        android:id="@+id/chartFragment"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_chart" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_alarm"
        android:title="@string/nav_alarms" />
</menu>